--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "jest": "^26.6.3",
+    "react-test-renderer": "^17.0.1",
     "webpack": "^5.14.0",
     "webpack-cli": "^3.3.12"
   },
