--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Spring boot react frontend app",
   "main": "index.js",
   "scripts": {
-    "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js"
+    "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js",
+    "test": "jest"
   },
   "author": "Tafadzwa L Nyamukapa",
   "license": "MIT",
@@ -13,6 +14,7 @@
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@testing-library/react": "^11.2.3",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "jest": "^26.6.3",
